# riptide_mapping

./: CMakeLists.txt  README.md  Readme.md  frames.gv  package.xml  setup.cfg  setup.py
cfg/: Mapping.cfg  ObjectData.cfg  covariances.yaml  initial_object_data.yaml  position.yaml  positions.yaml
config/: config-D.yaml  config.yaml
launch/: mapping.launch  mapping.launch.py
resource/: config.yaml
riptide_mapping2/: Estimate.py  calibrate.py  dummy_detections.py  estimate.py  mapping copy.py  mapping.py
scripts/: Estimate.py  Pose.py  calibrate.py  mapping.py
