<?xml version="1.0"?>
<package>
  <name>riptide_mapping</name>
  <version>0.1.0</version>
  <description>Riptide's Mapping System.</description>

  <maintainer email="acitelli.2@osu.edu">Anden Acitelli</maintainer>

  <license>BSD</license>

  <url type="website">https://uwrt.club</url>
  <url type="repository">http://github.com/osu-uwrt/riptide_mapping</url>

  <author email="acitelli.2@osu.edu">Anden Acitelli</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>riptide_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>python-numpy</build_depend>

  <run_depend>riptide_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>python-numpy</run_depend>

  <export>
  </export>
</package>
