<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>riptide_mapping2</name>
  <version>1.0.0</version>
  <description>Riptide's Mapping System.</description>

  <maintainer email="tucker.737@osu.edu">Cole Tucker</maintainer>

  <license>BSD</license>

  <url type="website">https://uwrt.club</url>
  <url type="repository">http://github.com/osu-uwrt/riptide_mapping</url>

  <author email="acitelli.2@osu.edu">Anden Acitelli</author>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
